<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name :</string>
    <string name="mobile_number">Mobile Number :</string>
    <string name="size_of_group">Size of Group</string>
    <string name="area_type">Area Type:</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="smoking">Smoking</string>
</resources>
